# src/services/api.js
@@ -1,10 +1,11 @@
-
+/* const passport = require('passport');
+const LocalStrategy = require('passport-local').Strategy; */
 const { Router } = require('express');
-const listsRouter = require('../modules/lists/router');
-const tasksRouter = require('../modules/tasks/router');
+const favorisRouter = require('../modules/favoris/router');
+const albumsRouter = require('../modules/albums/router');
 
 const router = new Router();
-
-router.use('/api', listsRouter);
-router.use('/api', tasksRouter);
+// router.use('/login', passport)
+router.use('/api', favorisRouter);
+router.use('/api', albumsRouter);
 module.exports = router;
